lib/recorn/recorn_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: constant_identifier_names, camel_case_types, non_constant_identifier_names

import 'dart:ffi' as ffi;

class ERROR_MSG extends ffi.Struct {
  @ffi.UnsignedChar()
  external int Type;

  @ffi.UnsignedChar()
  external int Cmd;

  @ffi.UnsignedChar()
  external int Error;

  @ffi.UnsignedChar()
  external int Reserve;

  @ffi.UnsignedInt()
  external int addr;

  @ffi.UnsignedInt()
  external int num;
}

class SC_DATA extends ffi.Union {
  @ffi.Array.multi([1440])
  external ffi.Array<ffi.Char> Bytes;

  @ffi.Array.multi([720])
  external ffi.Array<ffi.Short> Words;

  @ffi.Array.multi([360])
  external ffi.Array<ffi.Int> Ints;

  @ffi.Array.multi([180])
  external ffi.Array<ffi.Double> Fixs;
}

class LOCAL_CONTROLLER_INFO extends ffi.Struct {
  @ffi.UnsignedInt()
  external int IPLong;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> IP;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> Name;
}

class FTP_FILE extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> filename;

  @ffi.UnsignedInt()
  external int filesize;

  @ffi.UnsignedShort()
  external int year;

  @ffi.UnsignedChar()
  external int month;

  @ffi.UnsignedChar()
  external int day;

  @ffi.UnsignedChar()
  external int hour;

  @ffi.UnsignedChar()
  external int minute;

  @ffi.UnsignedChar()
  external int second;

  @ffi.UnsignedChar()
  external int Reserve;
}

class FTP_TRANFER_FILE extends ffi.Struct {
  @ffi.Int()
  external int Folder;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> SubFolder;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> Filename;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> LocalFilename;
}

class FUNCTION_SETTING extends ffi.Struct {
  @ffi.Int()
  external int MakerID;

  @ffi.Int()
  external int Reserve1;

  @ffi.Int()
  external int Reserve2;

  @ffi.Int()
  external int Reserve3;

  @ffi.Int()
  external int Reserve4;
}

class DLL_USE_SETTING extends ffi.Struct {
  @ffi.UnsignedInt()
  external int ConnectNum;

  @ffi.UnsignedInt()
  external int SoftwareType;

  @ffi.UnsignedInt()
  external int MemSizeI;

  @ffi.UnsignedInt()
  external int MemSizeO;

  @ffi.UnsignedInt()
  external int MemSizeC;

  @ffi.UnsignedInt()
  external int MemSizeS;

  @ffi.UnsignedInt()
  external int MemSizeA;

  @ffi.UnsignedInt()
  external int MemSizeR;

  @ffi.UnsignedInt()
  external int MemSizeF;

  @ffi.UnsignedInt()
  external int MemSizeTimer;

  @ffi.UnsignedInt()
  external int MemSizeCounter;
}

class MEM_SIZE extends ffi.Struct {
  @ffi.UnsignedInt()
  external int SizeI;

  @ffi.UnsignedInt()
  external int SizeO;

  @ffi.UnsignedInt()
  external int SizeC;

  @ffi.UnsignedInt()
  external int SizeS;

  @ffi.UnsignedInt()
  external int SizeA;

  @ffi.UnsignedInt()
  external int SizeR;

  @ffi.UnsignedInt()
  external int SizeF;

  @ffi.UnsignedInt()
  external int SizeTimer;

  @ffi.UnsignedInt()
  external int SizeCounter;
}

class MEM_OFFSET extends ffi.Struct {
  @ffi.UnsignedInt()
  external int OffsetI;

  @ffi.UnsignedInt()
  external int OffsetO;

  @ffi.UnsignedInt()
  external int OffsetC;

  @ffi.UnsignedInt()
  external int OffsetS;

  @ffi.UnsignedInt()
  external int OffsetA;

  @ffi.UnsignedInt()
  external int OffsetR;

  @ffi.UnsignedInt()
  external int OffsetF;

  @ffi.UnsignedInt()
  external int OffsetTimer;

  @ffi.UnsignedInt()
  external int OffsetCounter;
}

const int MAX_SYNC_COUNT = 10;

const int MAX_CONTROLLER_NUM_PER_MAKER = 300;

const int BIT_CB_SIZE = 4096;

const int INT_CB_SIZE = 20000;

const int FIX_CB_SIZE = 4096;

const int MAX_LOOP_SIZE = 64;

const int MAX_DIRECT_SIZE = 64;

const int DIRECT_ADDR_MASK = 63;

const int MAX_DATA_BYTES = 1440;

const int MAX_BIT_NUM = 1440;

const int MAX_WORD_NUM = 720;

const int MAX_INT_NUM = 360;

const int MAX_FIX_NUM = 180;

const int MAX_PTR_NUM = 180;

const int MAX_CB_NUM = 288;

const int MAX_CB_BIT_NUM = 288;

const int MAX_CB_WORD_NUM = 240;

const int MAX_CB_INT_NUM = 180;

const int MAX_CB_FIX_NUM = 120;

const int MAX_CB_PTR_NUM = 120;

const int I_OFFSET = 0;

const int O_OFFSET = 5120;

const int C_OFFSET = 10240;

const int S_OFFSET = 15360;

const int A_OFFSET = 20480;

const int TT_OFFSET = 25600;

const int CT_OFFSET = 30720;

const int RBIT_OFFSET = 100000;

const int R_OFFSET = 0;

const int RI_OFFSET = 8000000;

const int RO_OFFSET = 8100000;

const int RC_OFFSET = 8200000;

const int RS_OFFSET = 8300000;

const int RA_OFFSET = 8400000;

const int RTT_OFFSET = 8500000;

const int RCT_OFFSET = 8600000;

const int TV_OFFSET = 10000000;

const int TS_OFFSET = 10500000;

const int CV_OFFSET = 11000000;

const int CS_OFFSET = 11500000;

const int F_OFFSET = 10000000;

const int I_NUM = 4096;

const int O_NUM = 4096;

const int C_NUM = 4096;

const int S_NUM = 4096;

const int A_NUM = 4096;

const int R_NUM = 6000000;

const int F_NUM = 100000;

const int TIMER_NUM = 256;

const int COUNTER_NUM = 256;

const int SCIF_PROC_COUNTER = 1;

const int SCIF_MAKER_ID = 7;

const int SCIF_FTP_STATE = 11;

const int SCIF_FTP_RESULT = 12;

const int SCIF_FTP_STEP = 13;

const int SCIF_FTP_TOTAL_PACKAGE = 21;

const int SCIF_FTP_CURRENT_PACKAGE = 22;

const int SCIF_FTP_TOTAL_FILE = 31;

const int SCIF_FTP_CURRENT_FILE = 32;

const int SCIF_MEM_SIZE_I = 40;

const int SCIF_MEM_SIZE_O = 41;

const int SCIF_MEM_SIZE_C = 42;

const int SCIF_MEM_SIZE_S = 43;

const int SCIF_MEM_SIZE_A = 44;

const int SCIF_MEM_SIZE_TIMER = 45;

const int SCIF_MEM_SIZE_COUNTER = 46;

const int SCIF_MEM_SIZE_R = 47;

const int SCIF_MEM_SIZE_F = 52;

const int SCIF_CONNECT_STATE = 2;

const int SCIF_REMOTE_IPLONG = 3;

const int SCIF_CONNECT_STEP = 4;

const int SCIF_CONNECT_RESPONSE = 5;

const int SCIF_TALK_STATE = 6;

const int SCIF_MY_INTERNET_IPLONG = 8;

const int SCIF_MY_INTERNET_PORT = 9;

const int SCIF_MEDIA_RSP_COUNT = 10;

const int SCIF_RESPONSE_TIME = 11;

const int SCIF_OK_COUNT = 12;

const int SCIF_CRC_ERR_CNT = 13;

const int SCIF_LOOP_QUEUE_PKG_COUNT = 21;

const int SCIF_DIRECT_QUEUE_PKG_COUNT = 22;

const int SCIF_LOOP_COUNT = 23;

const int SCIF_TX_PKG_CNT = 24;

const int SCIF_TX_PKG_RETRY_CNT = 25;

const int SCIF_TX_CONNECT_CNT = 26;

const int SCIF_RX_UNEXPECT_CNT = 27;

const int SCIF_RX_ERR_FMT_CNT = 28;

const int SCIF_RX_CONNECT_CNT = 29;

const int SC_CONN_STATE_DISCONNECT = 0;

const int SC_CONN_STATE_CONNECTING = 1;

const int SC_CONN_STATE_FAIL = 2;

const int SC_CONN_STATE_OK = 3;

const int SC_CONN_STATE_NORESPONSE = 4;

const int CONNECT_RESULT_NORESPONSE = 0;

const int CONNECT_RESULT_OLD_SOFTWARE_CLEAR = 1;

const int CONNECT_RESULT_INVALID_SOFTWARE = 11;

const int CONNECT_RESULT_DISABLE_SOFTWARE = 12;

const int CONNECT_RESULT_DISABLE_INTERNET = 13;

const int CONNECT_RESULT_CLOSED_SOFTWARE = 14;

const int CONNECT_RESULT_CLOSED_INTERNET = 15;

const int CONNECT_RESULT_INVALID_MAKERID = 16;

const int CONNECT_RESULT_PASSWORD_WRONG = 17;

const int CONNECT_RESULT_NOT_IN_ALLOW = 18;

const int CONNECT_RESULT_ALL_IN_USE = 19;

const int CONNECT_RESULT_WAIT_CONFIRM = 21;

const int CONNECT_RESULT_SOFTWARE_CONNECTED = 31;

const int CONNECT_RESULT_SOFTWARE_REJECTED = 32;

const int CONNECT_RESULT_SOFTWARE_INREQ = 41;

const int CONNECT_RESULT_PENDING = 50;

const int FTP_FOLDER_RUN_NCFILES = 1;

const int FTP_FOLDER_NCFILES_RUN = 1;

const int FTP_FOLDER_RUN_DXF = 2;

const int FTP_FOLDER_DXF_RUN = 2;

const int FTP_FOLDER_TEACH_RUN = 3;

const int FTP_FOLDER_RECIPE_RUN = 4;

const int FTP_FOLDER_WORKDATA_RUN = 5;

const int FTP_FOLDER_NCFILES = 10;

const int FTP_FOLDER_MACRO = 21;

const int FTP_FOLDER_MACRO_MAKER = 20;

const int FTP_FOLDER_NCFILES_ROOT = 25;

const int FTP_FOLDER_MACRO_MAKER_ROOT = 26;

const int FTP_FOLDER_MACRO_ROOT = 27;

const int FTP_FOLDER_DXF = 28;

const int FTP_FOLDER_TEACH = 15;

const int FTP_FOLDER_RECIPE = 16;

const int FTP_FOLDER_WORKDATA = 17;

const int FTP_FOLDER_MACHINE = 30;

const int FTP_FOLDER_MACHINE_MAKER = 31;

const int FTP_FOLDER_MACHINE_SYS = 32;

const int FTP_FOLDER_SETUP = 40;

const int FTP_FOLDER_SETUP_MACHINE = 41;

const int FTP_FOLDER_BAK = 50;

const int FTP_FOLDER_DATA = 51;

const int FTP_FOLDER_LANGUAGE = 52;

const int FTP_FOLDER_LANGUAGE_DEF = 53;

const int FTP_FOLDER_LOG = 54;

const int FTP_FOLDER_RECORD = 55;

const int FTP_FOLDER_OPEN_HMI = 24;

const int FTP_FOLDER_OPEN_HMI_TOP = 60;

const int FTP_FOLDER_OPEN_HMI_BOTTOM = 61;

const int FTP_FOLDER_OPEN_HMI_LEFT = 62;

const int FTP_FOLDER_OPEN_HMI_RIGHT = 63;

const int FTP_FOLDER_OPEN_CUSTOM = 65;

const int FTP_FOLDER_OPEN_CUSTOM_TOP = 66;

const int FTP_FOLDER_OPEN_CUSTOM_BOTTOM = 67;

const int FTP_FOLDER_OPEN_CUSTOM_LEFT = 68;

const int FTP_FOLDER_OPEN_CUSTOM_RIGHT = 69;

const int FTP_STATE_IDLE = 0;

const int FTP_STATE_UPLOAD = 1;

const int FTP_STATE_DOWNLOAD = 2;

const int FTP_STATE_DELETE = 3;

const int FTP_STATE_LIST = 11;

const int FTP_STATE_UPLOAD_MANY = 21;

const int FTP_STATE_DOWNLOAD_MANY = 22;

const int FTP_STATE_DELETE_MANY = 23;

const int FTP_STATE_MAKE_DIR = 30;

const int FTP_STATE_PENDING = 99;

const int FTP_RESULT_IDLE = 0;

const int FTP_RESULT_PROCESSING = 1;

const int FTP_RESULT_SUCCESS = 2;

const int FTP_RESULT_FAIL_TO_READ_LOCAL_FILE = 11;

const int FTP_RESULT_FAIL_TO_WRITE_LOCAL_FILE = 12;

const int FTP_RESULT_FAIL_TO_READ_REMOTE_FILE = 13;

const int FTP_RESULT_FAIL_TO_WRITE_REMOTE_FILE = 14;

const int FTP_RESULT_FAIL_TO_SET_COMMAND = 15;

const int FTP_RESULT_FAIL_TO_COMMUNICATION = 16;

const int FTP_RESULT_FILE_MISMATCH = 17;

const int TALK_STATE_NORMAL = 0;

const int TALK_STATE_ERROR = 1;

const int TALK_STATE_OVER_RETRY = 2;

const int SC_TRANSACTION_PENDING = 0;

const int SC_TRANSACTION_PORCESSING = 1;

const int SC_TRANSACTION_FINISH = 2;

const int SC_TRANSACTION_INVALID = 3;

const int SCIF_ERROR_INVALID_PACKET_SET = 255;

const int FILENAME_LENGTH = 32;

const int MAX_FILE_LIST_NUM = 1024;

const int MAX_TRANSFER_FILE_COUNT = 1024;

const int MAX_SOFTWARE_COUNT = 5;

const int ERROR_TYPE_NONE = 0;

const int ERROR_TYPE_POLLING = 1;

const int ERROR_TYPE_DIRECT = 2;

const int SC_LOOP = 0;

const int SC_DIRECT = 1;
